Chore: Switching back to target build 22