@@ -54,9 +54,8 @@
 				<groupId>org.apache.maven.plugins</groupId>
 				<artifactId>maven-compiler-plugin</artifactId>
 				<configuration>
-					<source>23</source>
-					<target>23</target>
-                    <compilerArgs>--enable-preview</compilerArgs>
+					<source>22</source>
+					<target>22</target>
                 </configuration>
 			</plugin>
 		</plugins>
